force-app/main/default/objects/Fulfillment_Order__c/Fulfillment_Order__c.object-meta.xml
<CustomObject>
    <description>Warehouse fulfillment request split from an Order. Maps to FulfillmentOrder when Order Management is licensed.</description>
    <label>Fulfillment Order</label>
    <nameField>
        <displayFormat>FO-{00000}</displayFormat>
        <label>Fulfillment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>