force-app/main/default/objects/Fulfillment_Order__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>120</length>
    <type>Text</type>
</CustomField>