force-app/main/default/objects/Fulfillment_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>